# C-Generic-Vector-String

./: .gitignore  CMakeLists.txt  README.md
include/: String.h  gen_vector.h
src/: String.c  gen_vector.c
